# cmake

./: CMakeLists.txt
cmake/: CMP0048.cmake  CMP0057.cmake  CMP0063.cmake  CMP0069.cmake  CMP0091.cmake  CMakeFindLibraryShared.cmake  CMakeFindLibraryStatic.cmake  FindLDoc.cmake  FindLua.cmake  FindLuaJIT.cmake  FindQuickJS.cmake  FindRust.cmake  Findmath.cmake  InstallTargets.cmake  Languages.cmake  Project.cmake  TargetSupportsRelocatable.cmake  TargetSupportsSymbolicLink.cmake  TargetWarnings.cmake  UseCCache.cmake  Variables.cmake
src/: lib.c  lib.cc  lib.h  main.c
